# min_qml_module

./: .gitignore  CMakeLists.txt  README.md
extra/: CMakeLists.txt
main/: CMakeLists.txt  header.h  main.cpp
view/: CMakeLists.txt  Main_Page.qml
view/submodule/: CMakeLists.txt  Sub_Page.qml
